Homepage_center_aligned_bluebox_bulb section center align solved at 765px

--- a/css/media.css
+++ b/css/media.css
@@ -206,6 +206,8 @@
         margin-bottom: 10px;
     }.risk-reduce-title br{
         display: none;
+    }.risk-detail{
+        justify-content: center;
     }
 }
 @media only screen and (max-width: 600px){
